Bug Solved - Items Aligned

--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,53 @@
-body{
+body {
+    font-family: 'Ubuntu';
     display: flex;
     height: 100%;
-    
+
     flex-direction: column;
     background-color: #222222;
     justify-content: center;
     align-items: center;
 }
-head{
+
+head {
     display: table;
-    margin:auto;
+    margin: auto;
 }
-.description{
+
+.webcam {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 500px;
+}
+
+.description {
+    margin: 2rem;
     font-size: 1.5rem;
-    color:white;
-    text-align: center;
-}
-h1{
-    font-size:2.5rem;
-    color:white;
+    color: white;
     text-align: center;
 }
 
-.output{
+h1 {
+    font-size: 2.5rem;
+    color: white;
+    text-align: center;
+}
+
+.output {
     font-size: 2rem;
-    color:white;
+    color: white;
     text-align: center;
 
 }
+
+.removed {
+    display: none;
+}
+
 button {
-    
+    margin: auto;
+    display: block;
     background: #3D94F6;
     background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
     background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
@@ -50,12 +68,12 @@ button {
     text-shadow: 1px 1px 20px #000000;
     border: solid #337FED 1px;
     text-decoration: none;
-    display: inline-block;
+    /* display: inline-block; */
     cursor: pointer;
     text-align: center;
- }
- 
- button:hover {
+}
+
+button:hover {
     border: solid #337FED 1px;
     background: #1E62D0;
     background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
@@ -67,10 +85,10 @@ button {
     -moz-border-radius: 20px;
     border-radius: 20px;
     text-decoration: none;
- }
+}
 
- .centera{
+.centera {
     align-items: center;
     justify-content: center;
 
- }
+}
